<resources>
    <string name="app_name">MyCalculadora 3</string>
    <string name="lblSuma">+</string>
    <string name="lblResta">-</string>
    <string name="lblDiv">/</string>
    <string name="lblMul">X</string>
    <string name="lblPunto">.</string>
    <string name="lblIgual">=</string>
    <string name="lblNum1">1</string>
    <string name="lblNum2">2</string>
    <string name="lblNum3">3</string>
    <string name="lblNum4">4</string>
    <string name="lblNum5">5</string>
    <string name="lblNum6">6</string>
    <string name="lblNum7">7</string>
    <string name="lblNum8">8</string>
    <string name="lblNum9">9</string>
    <string name="lblNum0">0</string>
    <string name="lblClear">Borrar todo</string>
    <string name="lblRes">0</string>
</resources>
